# Desafio-Lacrei

./: .bandit  .bandit.conf  .env.example  .flake8  .gitignore  Dockerfile  README.md  bandit.yaml  codecov.yml  dev-entrypoint.sh  docker-compose.yml  emergency-deploy.sh  emergency-stop.sh  entrypoint.sh  fix-ecs-now.sh  fix-iam-permissions.sh  fix-task-definition.json  pyproject.toml  requirements.txt  setup-postgres-production.sh  setup.cfg  simple-test.sh  task-definition.json  test_throttling_demo.py
.github/: dependabot.yml
.github/workflows/: ci-cd.yml  preview-deploy.yml  security.yml
authentication/: serializers.py  test_mixins.py  test_throttling.py  test_throttling_simple.py  tests.py  urls.py  views.py
consultas/: models.py  serializers.py  test_throttling.py  tests.py  urls.py  views.py
consultas/migrations/: 0001_initial.py  0002_alter_consulta_options_consulta_atualizado_em_and_more.py
core/: debug_views.py  health.py  settings.py  settings_production.py  throttling.py  urls.py
profissionais/: apps.py  models.py  serializers.py  test_throttling.py  tests.py  urls.py  views.py
profissionais/migrations/: 0001_initial.py  0002_profissional_nome_social.py  0003_alter_profissional_options_profissional_ativo_and_more.py
scripts/: README.md  create-secrets-corrected.sh  diagnose-ecs.sh  diagnose-postgresql-commands.sh  diagnose-postgresql.sh  diagnose-simple.sh  entrypoint.sh  fix-postgresql-connectivity.sh  fix-postgresql-now.sh  fix-worker-timeout.sh  force-deploy-fix.sh  rollback.sh  setup-aws-infrastructure.sh  setup-postgres-production.sh  test-container.sh
static/: .gitkeep
