[tool.poetry]
name = "desafio-lacrei"
version = "0.1.0"
description = "Sistema de gerenciamento para consultas médicas da Lacrei Saúde"
authors = ["Luis Miguel <luismiguelsantossouza@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.2.5"
djangorestframework = "^3.16.1"
psycopg2-binary = "^2.9.10"
django-cors-headers = "^4.7.0"
dj-database-url = "^3.0.1"
drf-yasg = "^1.21.10"
djangorestframework-simplejwt = "^5.5.1"
python-decouple = "^3.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.3.0"
pytest = "^8.4.1"
pytest-django = "^4.11.1"
black = "^25.1.0"

