[tool.poetry]
name = "desafio-lacrei"
version = "0.1.0"
description = "Sistema de gerenciamento para consultas médicas da Lacrei Saúde"
authors = ["Luis Miguel <luismiguelsantossouza@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.2.5"
djangorestframework = "^3.16.1"
psycopg2-binary = "^2.9.10"
django-cors-headers = "^4.7.0"
dj-database-url = "^3.0.1"
drf-yasg = "^1.21.10"
djangorestframework-simplejwt = "^5.5.1"
python-decouple = "^3.8"
gunicorn = "^23.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.3.0"
pytest = "^8.4.1"
pytest-django = "^4.11.1"
black = "^25.1.0"
bandit = "^1.8.6"
isort = "^6.0.1"

[tool.isort]
# Configuration for isort to work with Black and Django
profile = "black"
line_length = 88
known_django = "django"
known_first_party = ["authentication", "consultas", "core", "profissionais"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "DJANGO", "FIRSTPARTY", "LOCALFOLDER"]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip = ["migrations", "__pycache__", ".venv", "venv", "env", ".env", "build", "dist", "*.egg-info"]

